--- a/src/app/dashboard/home.component.html
+++ b/src/app/dashboard/home.component.html
@@ -575,6 +575,6 @@
     </div>
    
     <!-- <p><a (click)="Logout($event)">Logout</a></p> -->
-    
-    <!-- <p><a [routerLink]="['/Home']">Logout</a></p> -->
+    <a [routerLink]="['/Home']"><button (click)="myMethod()">Logout</button></a>
+   
 </section>
