--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -27,7 +27,7 @@
         <ul class="dropdown-menu funds" style="display: none;">
           <li ><a [routerLink]="['/balances']">Balances</a></li>
           <li><a a [routerLink]="['/deposit']">Deposits</a></li>
-          <li><a href="#">Withdrawals</a></li>
+          <li><a [routerLink]="['/withdrawals']">Withdrawals</a></li>
           <li><a href="#">Transaction History</a></li>
           
         </ul>
