--- a/src/app/deposit/deposit.component.html
+++ b/src/app/deposit/deposit.component.html
@@ -2,7 +2,9 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 depositfirst">
+          <h1>Deposit</h1>
         <div class="depositdrop">
+          
             <div class="depcoin">
                <div class="showcoins"><span>Select coin/token to deposit</span><i class="fa fa-caret-down"></i> </div>
               </div>
@@ -19,6 +21,7 @@
           </div>
       </div>
       <div class="col-md-6 depositsecond">
+          <h1>History</h1>
         <!-- <div class="historytopbar">
             <span class="ordertopbar">History</span>
             <span class="depdidnot">Deposit did not arrive? </span>
